# shuup-yaml

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
data/: categories.yaml  manufacturers.yaml  products.yaml
shuup_yaml/: apps.py  importer.py
shuup_yaml/management/commands/: import_yaml.py
shuup_yaml_tests/: settings.py  test_import.py
